fix(grid): issue #27, sort icon hidden behind grid menu w/small dataset

--- a/src/app/modules/angular-slickgrid/styles/slick-bootstrap.scss
+++ b/src/app/modules/angular-slickgrid/styles/slick-bootstrap.scss
@@ -241,14 +241,6 @@
     }
   }
 
-  /*
-  .slick-header-columns:last-child .slick-header-column:last-child {
-    width: 210px !important;
-  }
-  .slick-viewport {
-    overflow-y: scroll !important;
-  }
-  */
   .slick-header-columns {
     background: $table-background;
     width: calc(100% - #{$header-scroll-width-to-remove});
